static/css/parts/Label.css
.Label {
  white-space: nowrap;
  contain: content;
  overflow: hidden;
  text-overflow: ellipsis;
  min-width: 0;
  flex: 1;
  display: flex;
}

.LabelDetail {
  font-size: 0.9em;
  opacity: 0.7;
  contain: content;
  margin-left: 4px;
}

.StrikeThrough {
  text-decoration: line-through;
}

